--- a/soup/package.json
+++ b/soup/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.0.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "router-dom": "^2.2.11",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
